{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 28,
  "lineage": "814ce53d-5c55-4ea9-bdf7-4bcb93b0a119",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f20d12678fa2c83a",
            "association_id": "eipassoc-0668f769803703f24",
            "domain": "vpc",
            "id": "eipalloc-0f20d12678fa2c83a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06b9d1f4b8c4def76",
            "private_dns": "ip-10-0-20-44.ec2.internal",
            "private_ip": "10.0.20.44",
            "public_dns": "ec2-52-45-212-243.compute-1.amazonaws.com",
            "public_ip": "52.45.212.243",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d33367f9eb85580",
            "domain": "vpc",
            "id": "eipalloc-05d33367f9eb85580",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-157-157-134.compute-1.amazonaws.com",
            "public_ip": "54.157.157.134",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352695400293:internet-gateway/igw-04531f0f2aa6e773d",
            "id": "igw-04531f0f2aa6e773d",
            "owner_id": "352695400293",
            "vpc_id": "vpc-0b3f5ac9fef1e97bf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f20d12678fa2c83a",
            "connectivity_type": "public",
            "id": "nat-060e994393e8666d9",
            "network_interface_id": "eni-0ee4b74de5b53960f",
            "private_ip": "10.0.10.128",
            "public_ip": "52.45.212.243",
            "subnet_id": "subnet-0b4efe0d8a5add2a2"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d33367f9eb85580",
            "connectivity_type": "public",
            "id": "nat-0cff36880cdb9faea",
            "network_interface_id": "eni-0572b5acfe7e21b15",
            "private_ip": "10.0.20.103",
            "public_ip": "54.157.157.134",
            "subnet_id": "subnet-06f7f8220eddfc0ce"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352695400293:route-table/rtb-098ed197023d7176f",
            "id": "rtb-098ed197023d7176f",
            "owner_id": "352695400293",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04531f0f2aa6e773d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b3f5ac9fef1e97bf"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352695400293:route-table/rtb-098b94c2f8685b175",
            "id": "rtb-098b94c2f8685b175",
            "owner_id": "352695400293",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04531f0f2aa6e773d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b3f5ac9fef1e97bf"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privaterta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0597c675fc2bf04fa",
            "route_table_id": "rtb-098ed197023d7176f",
            "subnet_id": "subnet-0b2533b8a884cd7f6"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.privatert",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06291029201976c28",
            "route_table_id": "rtb-098ed197023d7176f",
            "subnet_id": "subnet-043fb63b43f728054"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.privatert",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicrta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cb849a93cde79a5",
            "route_table_id": "rtb-098b94c2f8685b175",
            "subnet_id": "subnet-0b4efe0d8a5add2a2"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.publicrt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075be86048e667262",
            "route_table_id": "rtb-098b94c2f8685b175",
            "subnet_id": "subnet-06f7f8220eddfc0ce"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.publicrt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352695400293:security-group/sg-042af5054813ccc89",
            "description": "Private internet access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042af5054813ccc89",
            "ingress": [],
            "name": "terraform-20220719152053255400000002",
            "name_prefix": "terraform-",
            "owner_id": "352695400293",
            "revoke_rules_on_delete": false,
            "tags": {
              "Role": "private"
            },
            "tags_all": {
              "Role": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3f5ac9fef1e97bf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352695400293:security-group/sg-006147ff5a49d0b6d",
            "description": "Public internet access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006147ff5a49d0b6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220719152053248900000001",
            "name_prefix": "terraform-",
            "owner_id": "352695400293",
            "revoke_rules_on_delete": false,
            "tags": {
              "Role": "public"
            },
            "tags_all": {
              "Role": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3f5ac9fef1e97bf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-799426416",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-042af5054813ccc89",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-185690833",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-006147ff5a49d0b6d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2473006587",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-006147ff5a49d0b6d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3181066084",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-006147ff5a49d0b6d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2088669418",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-006147ff5a49d0b6d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352695400293:subnet/subnet-0b2533b8a884cd7f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2533b8a884cd7f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352695400293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b3f5ac9fef1e97bf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352695400293:subnet/subnet-043fb63b43f728054",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043fb63b43f728054",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352695400293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b3f5ac9fef1e97bf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352695400293:subnet/subnet-0b4efe0d8a5add2a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4efe0d8a5add2a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352695400293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b3f5ac9fef1e97bf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352695400293:subnet/subnet-06f7f8220eddfc0ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f7f8220eddfc0ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352695400293",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b3f5ac9fef1e97bf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:352695400293:vpc/vpc-0b3f5ac9fef1e97bf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0474a24f77e51d933",
            "default_route_table_id": "rtb-0b143d8ccb01faacf",
            "default_security_group_id": "sg-064af6cfdbbc8694a",
            "dhcp_options_id": "dopt-03a7b3353d8a6f639",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b3f5ac9fef1e97bf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b143d8ccb01faacf",
            "owner_id": "352695400293"
          }
        }
      ]
    }
  ]
}